Added Javadoc, more complex user validation logic for vote counting.