@@ -14,36 +14,79 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.awt.*;
+import java.time.OffsetDateTime;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
+/**
+ * The channel manager is responsible for interacting with the various Discord
+ * channels used by the Jam system, to send announcement, voting messages, and
+ * to record votes.
+ */
 public class JamChannelManager {
 	private static final Logger log = LoggerFactory.getLogger(JamChannelManager.class);
 
+	/**
+	 * The channel in which voting messages are sent and users vote.
+	 */
 	private final TextChannel votingChannel;
+
+	/**
+	 * The channel in which announcements are sent regarding the jam.
+	 */
 	private final TextChannel announcementChannel;
 
+	/**
+	 * Constructs the channel manager.
+	 * @param guild The guild that the channel manager is for.
+	 * @param database The database used to fetch various configuration properties.
+	 */
 	public JamChannelManager(Guild guild, Database database) {
 		this.votingChannel = database.getConfigChannel(guild, "channels.jam_vote_cid");
 		this.announcementChannel = database.getConfigChannel(guild, "channels.jam_announcement_cid");
 	}
 
+	/**
+	 * Convenience method to send an error message as a response to a deferred
+	 * slash command.
+	 * @param event The slash command event.
+	 * @param message The message to send.
+	 */
 	public void sendErrorMessageAsync(SlashCommandEvent event, String message) {
 		event.getHook().sendMessage(message).queue();
 	}
 
+	/**
+	 * Gets the number of votes each theme received.
+	 * @param messageId The id of the message to which users have reacted to
+	 *                  cast their votes.
+	 * @param themes The list of themes that can be voted on.
+	 * @return A map containing for each theme, a list of all user ids who have
+	 * voted on that theme.
+	 */
 	public Map<JamTheme, List<Long>> getThemeVotes(long messageId, List<JamTheme> themes) {
 		Message themeVotingMessage = votingChannel.retrieveMessageById(messageId).complete();
 		Map<JamTheme, List<Long>> votes = new HashMap<>();
 		for (int i = 0; i < themes.size(); i++) {
 			List<User> users = themeVotingMessage.retrieveReactionUsers(JamPhaseManager.REACTION_NUMBERS[i]).complete();
-			votes.put(themes.get(i), users.stream().filter(user -> !user.isBot()).map(ISnowflake::getIdLong).collect(Collectors.toList()));
+			votes.put(
+					themes.get(i),
+					users.stream()
+							.filter(user -> isUserVoteValid(themeVotingMessage.getGuild(), user, themeVotingMessage.getTimeCreated()))
+							.map(ISnowflake::getIdLong)
+							.toList()
+			);
 		}
 		return votes;
 	}
 
+	/**
+	 * Sends a message containing the themes to be voted on, in the voting channel.
+	 * @param jam The jam for which the themes are prepared.
+	 * @param themes The list of themes that will be put to a vote.
+	 * @return The id of the message which was generated.
+	 */
 	public long sendThemeVotingMessages(Jam jam, List<JamTheme> themes) {
 		this.removeAllMessages(this.votingChannel);
 		EmbedBuilder voteEmbedBuilder = new EmbedBuilder()
@@ -67,6 +110,12 @@ public class JamChannelManager {
 		return themeVoteMessage.getIdLong();
 	}
 
+	/**
+	 * Sends a message in the announcement channel which shows the theme which
+	 * was chosen.
+	 * @param votes A map containing for each theme, the number of votes it got.
+	 * @param winner The theme which was most voted-for.
+	 */
 	public void sendChosenThemeMessage(Map<JamTheme, Integer> votes, JamTheme winner) {
 		EmbedBuilder embedBuilder = new EmbedBuilder()
 				.setTitle(String.format("The %s's Theme Has Been Chosen!", winner.getJam().getFullName()))
@@ -92,6 +141,15 @@ public class JamChannelManager {
 		this.pingRole();
 	}
 
+	/**
+	 * Sends a message in the Jam voting channel for each submission, so that
+	 * users can begin voting on submissions.
+	 * @param jam The jam that the submissions are for.
+	 * @param submissions The submissions to make a message for.
+	 * @param jda The JDA instance.
+	 * @return A map containing for every submission, the id of the message that
+	 * users will react with votes on.
+	 */
 	public Map<JamSubmission, Long> sendSubmissionVotingMessage(Jam jam, List<JamSubmission> submissions, JDA jda) {
 		this.removeAllMessages(this.votingChannel);
 		Map<JamSubmission, Long> messageIds = new HashMap<>();
@@ -117,20 +175,94 @@ public class JamChannelManager {
 		return messageIds;
 	}
 
+	/**
+	 * Gets a list of user ids for each Jam submission, indicating the list of
+	 * users that voted for the submission.
+	 * @param submissionMessageMap A map containing for each submission, the id
+	 *                             of the message on which users will react with
+	 *                             the vote emoji.
+	 * @return A map containing a list of user ids for each Jam submission.
+	 */
 	public Map<JamSubmission, List<Long>> getSubmissionVotes(Map<JamSubmission, Long> submissionMessageMap) {
 		Map<JamSubmission, List<Long>> votesMap = new HashMap<>();
+		OffsetDateTime cutoff = OffsetDateTime.now();
 		for (var entry : submissionMessageMap.entrySet()) {
 			Message message = votingChannel.retrieveMessageById(entry.getValue()).complete();
+			Guild guild = message.getGuild();
 			List<User> users = message.retrieveReactionUsers(JamPhaseManager.SUBMISSION_VOTE_UNICODE).complete();
-			votesMap.put(entry.getKey(), users.stream().filter(user -> !user.isBot()).map(ISnowflake::getIdLong).collect(Collectors.toList()));
+			votesMap.put(
+					entry.getKey(),
+					users.stream()
+							.filter(user -> isUserVoteValid(guild, user, cutoff))
+							.map(ISnowflake::getIdLong)
+							.toList()
+			);
 		}
 		return votesMap;
 	}
 
+	/**
+	 * Determines if a user's vote should be counted, based on how long the user
+	 * has been a member of the guild, and how active they are.
+	 * @param guild The guild in which to check.
+	 * @param user The user to check.
+	 * @param cutoff The date at which the vote is being performed.
+	 * @return True if the user's vote should count, or false if not.
+	 */
+	public boolean isUserVoteValid(Guild guild, User user, OffsetDateTime cutoff) {
+		if (user.isBot() || user.isSystem()) return false;
+		Member member = guild.getMember(user);
+		if (member == null || member.isPending()) return false;
+		boolean memberForSufficientTime = (!member.hasTimeJoined() || member.getTimeJoined().plusHours(1).isBefore(cutoff));
+		boolean sentMessage = false;
+		for (var channel : guild.getTextChannels()) {
+			sentMessage = sentMessage || hasMemberSentMessage(member, channel, cutoff.minusMonths(1));
+		}
+		return memberForSufficientTime && sentMessage;
+	}
+
+	/**
+	 * Determines if the given member has sent at least a single message in the
+	 * given channel.
+	 * @param member The member to check.
+	 * @param channel The channel to check in.
+	 * @param cutoff The time at which messages are considered. Any message
+	 *               before this time is ignored.
+	 * @return True if the user has sent a message, or false otherwise.
+	 */
+	public boolean hasMemberSentMessage(Member member, TextChannel channel, OffsetDateTime cutoff) {
+		MessageHistory history = channel.getHistory();
+		List<Message> messages = history.retrievePast(100).complete();
+		while (!messages.isEmpty()) {
+			for (var message : messages) {
+				if (message.getTimeCreated().isBefore(cutoff)) {
+					break;
+				} else if (member.equals(message.getMember())) {
+					return true;
+				}
+			}
+			// No message was found, and we haven't reached the cutoff, so fetch more.
+			messages = history.retrievePast(100).complete();
+		}
+		return false;
+	}
+
+	/**
+	 * Sends a message in the announcement channel in the event that no winners
+	 * could be determined for a jam.
+	 */
 	public void sendNoWinnersMessage() {
 		announcementChannel.sendMessage("No winning submission could be determined.").complete();
 	}
 
+	/**
+	 * Sends a message in the announcement channel when a single winner is
+	 * chosen for a jam.
+	 * @param submission The winning submission.
+	 * @param voteCounts A map containing for each submission, the number of
+	 *                   votes it received.
+	 * @param event The event which triggered this method.
+	 */
 	public void sendSingleWinnerMessage(JamSubmission submission, Map<JamSubmission, Integer> voteCounts, SlashCommandEvent event) {
 		String username = this.getSubmissionUserName(submission, event);
 		EmbedBuilder embedBuilder = new EmbedBuilder()
@@ -144,6 +276,14 @@ public class JamChannelManager {
 		this.removeAllMessages(this.votingChannel);
 	}
 
+	/**
+	 * Sends a message in the announcement channel when multiple winners are
+	 * chosen for a jam.
+	 * @param submissions The list of winning submissions.
+	 * @param voteCounts A map containing for each submission, the number of
+	 *                   votes it received.
+	 * @param event The event which triggered this method.
+	 */
 	public void sendMultipleWinnersMessage(List<JamSubmission> submissions, Map<JamSubmission, Integer> voteCounts, SlashCommandEvent event) {
 		EmbedBuilder embedBuilder = new EmbedBuilder()
 				.setTitle(String.format("There Are Multiple Winners of the %s!", submissions.get(0).getJam()))
@@ -163,6 +303,15 @@ public class JamChannelManager {
 		this.removeAllMessages(this.votingChannel);
 	}
 
+	/**
+	 * Adds fields to an embed for displaying information about the runners-up
+	 * for a jam.
+	 * @param embedBuilder The embed builder.
+	 * @param voteCounts A map containing each submission and the number of
+	 *                   votes it received.
+	 * @param winners The list of winning submissions.
+	 * @param event The event which triggered this method.
+	 */
 	private void addRunnerUpSubmissionFields(EmbedBuilder embedBuilder, Map<JamSubmission, Integer> voteCounts, List<JamSubmission> winners, SlashCommandEvent event) {
 		var otherSubmissions = new HashMap<>(voteCounts);
 		winners.forEach(otherSubmissions::remove);
@@ -179,6 +328,14 @@ public class JamChannelManager {
 		}
 	}
 
+	/**
+	 * Gets the name which should be displayed for a user's submission. This
+	 * defaults to the user's guild-specific nickname, or "Unknown User" if no
+	 * name could be resolved.
+	 * @param submission The submission to get a username for.
+	 * @param event The event which triggered this method.
+	 * @return The name to display alongside the submission.
+	 */
 	private String getSubmissionUserName(JamSubmission submission, SlashCommandEvent event) {
 		User winner = event.getJDA().getUserById(submission.getUserId());
 		Guild guild = event.getGuild();
@@ -186,6 +343,10 @@ public class JamChannelManager {
 		return member == null ? "Unknown User" : member.getEffectiveName();
 	}
 
+	/**
+	 * Utility method to remove all messages from a channel.
+	 * @param channel The channel to remove messages from.
+	 */
 	private void removeAllMessages(TextChannel channel) {
 		List<Message> messages;
 		do {
@@ -199,6 +360,10 @@ public class JamChannelManager {
 		} while (!messages.isEmpty());
 	}
 
+	/**
+	 * Sends a single message in the announcement channel that contains a "ping"
+	 * for the jam-ping role, to alert all members of that role.
+	 */
 	private void pingRole() {
 		Role jamPingRole = new Database().getConfigRole(this.announcementChannel.getGuild(), "roles.jam_ping_rid");
 		if (jamPingRole == null) {
